--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,14 @@
 <h2 id="title">Welcome to Ember.js</h2>
+{{#form-for model=model mistakes=mistakes action="submit"}}
+  {{partial "fixture"}}
+{{/form-for}}
 
+<div>
+  {{model.email}}
+  {{model.expectedAt}}
+</div>
+<div>
+  {{mistakes.email}}
+  {{mistakes.expectedAt}}
+</div>
 {{outlet}}
