--- a/tests/dummy/app/templates/-fixture.hbs
+++ b/tests/dummy/app/templates/-fixture.hbs
@@ -1,9 +1,9 @@
 <legend class="whatever">stuff</legend>
-{{#form-input id="charlie-401" type="email" name="email" label="email"}}
+{{#em-form-input id="charlie-401" type="email" name="email" label="email"}}
   <span class="helper-text">put your primary email</span>
-{{/form-input}}
+{{/em-form-input}}
 
-{{form-input type="datetime-local" name="expectedAt"}}
+{{em-form-input type="datetime-local" name="expectedAt"}}
 <button type="submit">
   <span>submit</span>
 </button>
