--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h2 id="title">Welcome to Ember.js</h2>
-{{#form-for model=model mistakes=mistakes action="submit"}}
+{{#em-form-for model=model mistakes=mistakes action="submit"}}
   {{partial "fixture"}}
-{{/form-for}}
+{{/em-form-for}}
 
 <div>
   {{model.email}}
