--- a/tests/dummy/app/templates/-fixture.hbs
+++ b/tests/dummy/app/templates/-fixture.hbs
@@ -4,6 +4,8 @@
 {{/em-form-input}}
 
 {{em-form-input type="datetime-local" name="expectedAt"}}
+
+{{em-form-input type="webcam" name="mugshots"}}
 <button type="submit">
   <span>submit</span>
 </button>
