--- a/addon/templates/components/em-text-field.hbs
+++ b/addon/templates/components/em-text-field.hbs
@@ -15,6 +15,7 @@
   {{/if}}
   {{input class="form-control"
     value=(mut value) 
+    type=type
     readonly=readonly
     required=required
     autofocus=autofocus
