added date time fields

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,8 +1,26 @@
 <div class="list-group">
   {{#link-to "basics" class="list-group-item"}}
-    basic form
+    <h4>basic form</h4>
+    <div>email, password, text, textarea fields</div>
   {{/link-to}}
-  {{#link-to "errors" class="list-group-item"}}
-    form errors
+  {{#link-to "datetime" class="list-group-item"}}
+    <h4>date time</h4>
+    <div>date, time, datetime fields</div>
+  {{/link-to}}
+  {{#link-to "files" class="list-group-item" disabled=true}}
+    <h4>files</h4>
+    <div>WIP</div>
+  {{/link-to}}
+  {{#link-to "usermedia" class="list-group-item" disabled=true}}
+    <h4>usermedia</h4>
+    <div>WIP</div>
+  {{/link-to}}
+  {{#link-to "material" class="list-group-item" disabled=true}}
+    <h4>material</h4>
+    <div>WIP</div>
+  {{/link-to}}
+  {{#link-to "creative" class="list-group-item" disabled=true}}
+    <h4>creative</h4>
+    <div>WIP</div>
   {{/link-to}}
 </div>
