errors on models are now expected to be arrays, this reflects the specs as set forth by jsonapi

--- a/tests/dummy/app/templates/snippets/-datetime.hbs
+++ b/tests/dummy/app/templates/snippets/-datetime.hbs
@@ -8,6 +8,9 @@
   {{#em-datetime-field f suffix="fa-twitter"}}
     <span class="helper-text">select a datetime</span>
   {{/em-datetime-field}}
+  {{#em-datetime-field f name="moment" suffix="fa-twitter"}}
+    <span class="helper-text">you can use moment objects as well</span>
+  {{/em-datetime-field}}
   <button class="btn btn-success" type="submit">
     <span>Click Me</span>
   </button>
