--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -7,6 +7,10 @@
     <h4>date time</h4>
     <div>date, time, datetime fields</div>
   {{/link-to}}
+  {{#link-to "selection" class="list-group-item"}}
+    <h4>select inputs</h4>
+    <div>select, radios, and checkboxes</div>
+  {{/link-to}}
   {{#link-to "files" class="list-group-item" disabled=true}}
     <h4>files</h4>
     <div>WIP</div>
