--- a/assets/vendor.css
+++ b/assets/vendor.css
@@ -492,6 +492,210 @@
 .hljs-chunk {
     color: #aaa;
 }
+.ember-basic-dropdown {
+  position: relative; }
+
+.ember-basic-dropdown, .ember-basic-dropdown *, .ember-basic-dropdown-content, .ember-basic-dropdown-content * {
+  box-sizing: border-box; }
+
+.ember-basic-dropdown-content {
+  position: absolute;
+  width: auto;
+  z-index: 1000;
+  background-color: #ffffff; }
+
+.ember-power-select {
+  position: relative; }
+
+.ember-power-select *, .ember-power-select-dropdown * {
+  box-sizing: border-box; }
+
+.ember-power-select-trigger {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #ffffff;
+  line-height: 2;
+  text-overflow: ellipsis;
+  min-height: 2em;
+  user-select: none;
+  -webkit-user-select: none;
+  color: inherit; }
+  .ember-power-select-trigger:focus {
+    border: 1px solid #66afe9;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+    outline: 0; }
+  .ember-power-select.multiple .ember-power-select-trigger {
+    height: auto; }
+  .ember-power-select:not(.multiple) .ember-power-select-trigger {
+    white-space: nowrap; }
+  .ember-basic-dropdown--opened.ember-basic-dropdown--below .ember-power-select-trigger, .ember-basic-dropdown--opened.ember-basic-dropdown--in-place .ember-power-select-trigger {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px; }
+  .ember-basic-dropdown--opened.ember-basic-dropdown--above .ember-power-select-trigger {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px; }
+
+.ember-power-select-placeholder {
+  color: #999999; }
+
+.ember-power-select-status-icon {
+  position: absolute;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border-style: solid;
+  border-width: 7px 4px 0 4px;
+  border-color: #999 transparent transparent transparent; }
+  .ember-basic-dropdown--opened .ember-power-select-status-icon {
+    transform: rotate(180deg); }
+
+.ember-power-select-clear-btn {
+  position: absolute;
+  cursor: pointer; }
+
+.ember-power-select-trigger-multiple-input {
+  font-family: inherit;
+  font-size: inherit;
+  width: 25px;
+  border: none;
+  display: inline-block;
+  line-height: inherit;
+  -webkit-appearance: none;
+  outline: none;
+  padding: 0; }
+  .ember-power-select-trigger-multiple-input:disabled {
+    background-color: #eeeeee; }
+
+.ember-power-select-multiple-option {
+  border: 1px solid gray;
+  border-radius: 4px;
+  color: #333333;
+  background-color: #e4e4e4;
+  padding: 0 4px;
+  display: inline-block;
+  line-height: 1.5;
+  margin: 2px 0; }
+
+.ember-power-select-multiple-remove-btn {
+  cursor: pointer; }
+  .ember-power-select-multiple-remove-btn:not(:hover) {
+    opacity: 0.5; }
+
+.ember-power-select-search {
+  padding: 4px; }
+  .ember-power-select-search input {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    width: 100%;
+    font-size: inherit;
+    line-height: inherit;
+    padding: 0 5px; }
+    .ember-power-select-search input:focus {
+      border: 1px solid #66afe9;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+      outline: 0; }
+
+.ember-power-select-dropdown {
+  width: 100%;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  line-height: 2;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.172549) 0px 6px 12px 0px;
+  overflow: hidden;
+  color: inherit; }
+  .ember-power-select-dropdown.ember-basic-dropdown--above {
+    transform: translateY(-3px);
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px; }
+  .ember-power-select-dropdown.ember-basic-dropdown--below, .ember-basic-dropdown--in-place .ember-power-select-dropdown {
+    transform: translateY(3px);
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px; }
+
+.ember-power-select-options {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  -webkit-user-select: none; }
+  .ember-power-select-options:not(.ember-power-select-options--nested) {
+    overflow-y: auto;
+    max-height: 14em; }
+
+.ember-power-select-option {
+  cursor: pointer;
+  padding: 0 8px; }
+
+.ember-power-select-option--disabled {
+  color: #999999;
+  pointer-events: none; }
+
+.ember-power-select-option--selected {
+  background-color: #f5f5f5; }
+
+.ember-power-select-option--highlighted {
+  background-color: #f5f5f5;
+  color: inherit; }
+
+.ember-power-select-group-name {
+  cursor: default;
+  font-weight: bold; }
+
+.ember-power-select.ember-basic-dropdown--disabled .ember-power-select-trigger {
+  background-color: #eeeeee; }
+
+.ember-power-select-trigger {
+  padding: 0 16px 0 8px; }
+
+.ember-power-select-status-icon {
+  right: 5px; }
+
+.ember-power-select-clear-btn {
+  right: 25px; }
+
+.ember-power-select-group .ember-power-select-group .ember-power-select-group-name {
+  padding-left: 24px; }
+
+.ember-power-select-group .ember-power-select-group .ember-power-select-option {
+  padding-left: 40px; }
+
+.ember-power-select-group .ember-power-select-option {
+  padding-left: 24px; }
+
+.ember-power-select-group .ember-power-select-group-name {
+  padding-left: 8px; }
+
+.ember-power-select[dir=rtl] .ember-power-select-trigger {
+  padding: 0 8px 0 16px; }
+
+.ember-power-select[dir=rtl] .ember-power-select-status-icon {
+  left: 5px;
+  right: initial; }
+
+.ember-power-select[dir=rtl] .ember-power-select-clear-btn {
+  left: 25px;
+  right: initial; }
+
+.ember-power-select-dropdown[dir=rtl] .ember-power-select-group .ember-power-select-group .ember-power-select-group-name {
+  padding-right: 24px; }
+
+.ember-power-select-dropdown[dir=rtl] .ember-power-select-group .ember-power-select-group .ember-power-select-option {
+  padding-right: 40px; }
+
+.ember-power-select-dropdown[dir=rtl] .ember-power-select-group .ember-power-select-option {
+  padding-right: 24px; }
+
+.ember-power-select-dropdown[dir=rtl] .ember-power-select-group .ember-power-select-group-name {
+  padding-right: 8px; }
+
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
