--- a/tests/dummy/app/templates/snippets/-basics.hbs
+++ b/tests/dummy/app/templates/snippets/-basics.hbs
@@ -11,6 +11,9 @@
   {{#em-textarea-field f name="feelings" prefix="fa-heart"}}
     <span class="helper-text">Very similar to regular text fields</span>
   {{/em-textarea-field}}
+  {{#em-number-field f name="money" prefix="fa-money"}}
+    <span class="helper-text">Number fields have a little scroller to the side</span>
+  {{/em-number-field}}
   <button class="btn btn-success" type="submit">
     <span>Click Me</span>
   </button>
