--- a/tests/dummy/app/templates/snippets/-select.hbs
+++ b/tests/dummy/app/templates/snippets/-select.hbs
@@ -9,6 +9,9 @@
   <div class="helper-text">
     If you do customize your options, the helper text goes away
   </div>
+  {{#em-checkbox-field f name="rememberMe"}}
+    Remember Me?
+  {{/em-checkbox-field}}
   <button class="btn btn-success" type="submit">
     <span>Click Me</span>
   </button>
