added file upload and preview

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -8,12 +8,12 @@
     <div>date, time, datetime fields</div>
   {{/link-to}}
   {{#link-to "selection" class="list-group-item"}}
-    <h4>select inputs</h4>
+    <h4>select inputs (WIP)</h4>
     <div>select, radios, and checkboxes</div>
   {{/link-to}}
-  {{#link-to "files" class="list-group-item" disabled=true}}
+  {{#link-to "files" class="list-group-item"}}
     <h4>files</h4>
-    <div>WIP</div>
+    <div>file, files, pictures, and other binary things</div>
   {{/link-to}}
   {{#link-to "usermedia" class="list-group-item" disabled=true}}
     <h4>usermedia</h4>
