--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -16,6 +16,11 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
+      {{#link-to "index"}}Back to Index{{/link-to}}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
       {{outlet}}
     </div>
   </div>
