added some default styles

--- a/addon/templates/components/em-file-field.hbs
+++ b/addon/templates/components/em-file-field.hbs
@@ -2,7 +2,7 @@
   {{#if hasBlock}}
     {{yield}}
   {{else}}
-    <h3 class="label label-default">{{label}}</h3>
+    {{label}}
   {{/if}}
   {{#if value}}
     <div class="label-info">You have uploaded 
