--- a/tests/dummy/app/templates/files.hbs
+++ b/tests/dummy/app/templates/files.hbs
@@ -1,3 +1,6 @@
+<div class="alert alert-warning">
+  You may want to `label.em-file-field-label` yourself to make it easier to click on
+</div>
 {{partial "snippets/files"}}
 
 <div>
