--- a/assets/ember-form-tool.scss
+++ b/assets/ember-form-tool.scss
@@ -1,2 +1,2 @@
-@import "ember-power-select";
-@import 'ember-power-select/themes/bootstrap';
+@import "ember-form-tool/power-select";
+@import "ember-form-tool/file-field";
