added timezone input

--- a/tests/dummy/app/templates/datetime.hbs
+++ b/tests/dummy/app/templates/datetime.hbs
@@ -4,7 +4,12 @@
     ember-bootstrap-datetimepicker
   </a> yourself if you wish to use the bootstrap flavor of the datetime selection
 </div>
-
+<div class="alert alert-warning">
+  You need to install 
+  <a href="https://github.com/foxnewsnetwork/ember-timezone-input">
+    ember-timezone-input
+  </a> yourself if you wish to use to timezone input tool (don't forget to import styles!)
+</div>
 {{partial "snippets/datetime"}}
 
 <div>
