--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -5,7 +5,7 @@
   {{/link-to}}
   {{#link-to "datetime" class="list-group-item"}}
     <h4>date time</h4>
-    <div>date, time, datetime fields</div>
+    <div>date, time, datetime, and timezone fields</div>
   {{/link-to}}
   {{#link-to "selection" class="list-group-item"}}
     <h4>select inputs (WIP)</h4>
