updated to latest ember, select fields now properly proxy search to power select

--- a/addon/templates/components/em-select-field.hbs
+++ b/addon/templates/components/em-select-field.hbs
@@ -18,6 +18,9 @@
     id=controlId
     allowClear=allowClear
     placeholder=placeholder
+    search=search
+    searchField=searchField
+    onkeydown=onkeydown
     disabled=disabled
     options=options 
     selected=value 
