new gh-pages version

--- a/assets/ember-basic-dropdown.scss
+++ b/assets/ember-basic-dropdown.scss
@@ -6,8 +6,20 @@ $ember-basic-dropdown-content-z-index: 1000 !default;
 }
 .ember-basic-dropdown, .ember-basic-dropdown *, .ember-basic-dropdown-content, .ember-basic-dropdown-content * {
   box-sizing: border-box;
+
+  .ember-basic-dropdown--left {
+    left: 0;
+  }
+
+  .ember-basic-dropdown--right {
+    right: 0;
+  }
 }
 
+.ember-basic-dropdown-text-select-disabled {
+  user-select: none;
+  -webkit-user-select: none;
+}
 .ember-basic-dropdown-content {
   position: absolute;
   width: auto;
