--- a/assets/ember-power-select.scss
+++ b/assets/ember-power-select.scss
@@ -19,10 +19,20 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
   background-color: $ember-power-select-background-color;
   line-height: $ember-power-select-line-height;
   text-overflow: ellipsis;
-  min-height: #{$ember-power-select-line-height}em;
+  @if unitless($ember-power-select-line-height) {
+    min-height: #{$ember-power-select-line-height}em;
+  } @else {
+    min-height: $ember-power-select-line-height;
+  }
   user-select: none;
   -webkit-user-select: none;
   color: $ember-power-select-text-color;
+  /* Minimum clearfix for modern browsers */
+  &:after {
+    content:"";
+    display:table;
+    clear:both;
+  }
   &:focus {
     border: $ember-power-select-trigger-focus-border;
     box-shadow: $ember-power-select-focus-box-shadow;
@@ -32,17 +42,22 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
   }
   .ember-power-select.multiple & { height: auto; }
   .ember-power-select:not(.multiple) & { white-space: nowrap; }
-  .ember-basic-dropdown--opened.ember-basic-dropdown--below &, .ember-basic-dropdown--opened.ember-basic-dropdown--in-place & {
-    border-bottom-left-radius: $ember-power-select-opened-border-radius;
-    border-bottom-right-radius: $ember-power-select-opened-border-radius;
-  }
-  .ember-basic-dropdown--opened.ember-basic-dropdown--above & {
-    border-top-left-radius: $ember-power-select-opened-border-radius;
-    border-top-right-radius: $ember-power-select-opened-border-radius;
-  }
+}
+.ember-basic-dropdown--below .ember-power-select-trigger[aria-expanded="true"],
+.ember-basic-dropdown--in-place .ember-power-select-trigger[aria-expanded="true"] {
+  border-bottom-left-radius: $ember-power-select-opened-border-radius;
+  border-bottom-right-radius: $ember-power-select-opened-border-radius;
+}
+.ember-basic-dropdown--above .ember-power-select-trigger[aria-expanded="true"] {
+  border-top-left-radius: $ember-power-select-opened-border-radius;
+  border-top-right-radius: $ember-power-select-opened-border-radius;
 }
 .ember-power-select-placeholder {
   color: $ember-power-select-placeholder-color;
+  display: block;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .ember-power-select-status-icon {
   position: absolute;
@@ -51,7 +66,7 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
   border-style: solid;
   border-width: 7px 4px 0 4px;
   border-color: $ember-power-select-trigger-icon-color transparent transparent transparent;
-  .ember-basic-dropdown--opened & {
+  .ember-basic-dropdown-trigger[aria-expanded="true"] & {
     transform: rotate(180deg);
   }
 }
@@ -61,29 +76,40 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
 }
 
 // Multiple select
+.ember-power-select-multiple-trigger {
+  display: flex;
+  flex-wrap: wrap;
+}
 .ember-power-select-trigger-multiple-input {
+  flex: 1;
   font-family: inherit;
   font-size: inherit;
-  width: 25px;
   border: none;
+  width: 25px;
   display: inline-block;
   line-height: inherit;
   -webkit-appearance: none;
   outline: none;
   padding: 0;
+  float: left;
+  background-color: transparent;
   &:disabled {
     background-color: $ember-power-select-disabled-background-color;
   }
 }
+.ember-power-select-multiple-options {
+  padding: 0; margin: 0;
+}
 .ember-power-select-multiple-option {
-  border: 1px solid gray;
+  border: $ember-power-select-multiple-option-border;
   border-radius: $ember-power-select-multiple-option-border-radius;
   color: $ember-power-select-multiple-selection-color;
   background-color: $ember-power-select-multiple-selection-background-color;
-  padding: 0 4px;
+  padding: $ember-power-select-multiple-option-padding;
   display: inline-block;
-  line-height: 1.5;
-  margin: 2px 0;
+  line-height: 1.45;
+  float: left;
+  margin: 2px 3px 2px 0;
 }
 .ember-power-select-multiple-remove-btn {
   cursor: pointer;
@@ -111,7 +137,6 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
 
 // Dropdown
 .ember-power-select-dropdown {
-  width: 100%;
   border-left: $ember-power-select-dropdown-left-border;
   border-right: $ember-power-select-dropdown-right-border;
   line-height: $ember-power-select-line-height;
@@ -138,15 +163,23 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
     border-top-right-radius: $ember-power-select-opened-border-radius;
   }
 }
+.ember-power-select .ember-power-select-dropdown { // Dropdown when rendered in place
+  width: 100%;
+}
+// Options
 .ember-power-select-options {
   list-style: none;
   margin: 0;
   padding: 0;
   user-select: none;
   -webkit-user-select: none;
-  &:not(.ember-power-select-options--nested) {
+  &[role="listbox"] {
     overflow-y: auto;
-    max-height: #{$ember-power-select-number-of-visible-options * $ember-power-select-line-height}em;
+    @if unitless($ember-power-select-line-height) {
+      max-height: #{$ember-power-select-number-of-visible-options * $ember-power-select-line-height}em;
+    } @else {
+      max-height: $ember-power-select-number-of-visible-options * $ember-power-select-line-height;
+    }
   }
 }
 
@@ -154,12 +187,12 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
   cursor: pointer;
   padding: 0 $ember-power-select-option-padding;
 }
-.ember-power-select-option--disabled {
+.ember-power-select-option[aria-disabled="true"] {
   color: $ember-power-select-disabled-option-color;
   pointer-events: none;
 }
-.ember-power-select-option--selected { background-color: $ember-power-select-selected-background; }
-.ember-power-select-option--highlighted {
+.ember-power-select-option[aria-selected="true"] { background-color: $ember-power-select-selected-background; }
+.ember-power-select-option[aria-current="true"] {
   background-color: $ember-power-select-highlighted-background;
   color: $ember-power-select-highlighted-color;
 }
@@ -171,15 +204,13 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
 }
 
 // Disabled styles
-.ember-power-select.ember-basic-dropdown--disabled {
-  .ember-power-select-trigger {
-    background-color: $ember-power-select-disabled-background-color;
-  }
+.ember-power-select-trigger[aria-disabled=true] {
+  background-color: $ember-power-select-disabled-background-color;
 }
 
 // LTR styles
 .ember-power-select-trigger {
-  padding: 0 16px 0 8px;
+  padding: $ember-power-select-trigger-ltr-padding;
 }
 .ember-power-select-status-icon {
   right: 5px;
@@ -200,7 +231,13 @@ $ember-basic-dropdown-content-background-color: $ember-power-select-background-c
 // RTL styles
 .ember-power-select[dir=rtl] {
   .ember-power-select-trigger {
-    padding: 0 8px 0 16px;
+    padding: $ember-power-select-trigger-rtl-padding;
+    .ember-power-select-multiple-option {
+      float: right;
+    }
+    .ember-power-select-trigger-multiple-input {
+      float: right;
+    }
   }
   .ember-power-select-status-icon {
     left: 5px;
