--- a/assets/ember-power-select/variables.scss
+++ b/assets/ember-power-select/variables.scss
@@ -10,6 +10,7 @@ $ember-power-select-selected-background: #dddddd !default;
 // Texts
 $ember-power-select-text-color: inherit !default;
 $ember-power-select-placeholder-color: #999999 !default;
+$ember-power-select-highlighted-color: #ffffff !default;
 $ember-power-select-disabled-option-color: #999999 !default;
 $ember-power-select-multiple-selection-color: #333333 !default;
 
@@ -31,6 +32,9 @@ $ember-power-select-dropdown-left-border: $ember-power-select-dropdown-border !d
 
 $ember-power-select-dropdown-contiguous-border: none !default;
 
+$ember-power-select-multiple-option-border-color: gray !default;
+$ember-power-select-multiple-option-border: 1px solid $ember-power-select-multiple-option-border-color !default;
+
 // Borders radius
 $ember-power-select-default-border-radius: 4px !default; // General border radius
 $ember-power-select-trigger-default-border-radius: $ember-power-select-default-border-radius !default;
@@ -45,10 +49,12 @@ $ember-power-select-multiple-option-border-radius: $ember-power-select-default-b
 $ember-power-select-focus-box-shadow: none !default;
 $ember-power-select-dropdown-margin: 0 !default; // Margin between the dropdown and the trigger
 $ember-power-select-dropdown-box-shadow: none !default;
-$ember-power-select-highlighted-color: #ffffff !default;
 $ember-power-select-line-height: 1.75 !default;
 $ember-power-select-trigger-icon-color: $ember-power-select-border-color !default;
 $ember-power-select-clear-btn-margin: 25px !default;
 $ember-power-select-option-padding: 8px !default;
-$ember-power-select-number-of-visible-options: 7;
+$ember-power-select-number-of-visible-options: 7 !default;
 $ember-power-select-focus-outline: null !default;
+$ember-power-select-trigger-ltr-padding: 0 16px 0 8px !default;
+$ember-power-select-trigger-rtl-padding: 0 8px 0 16px !default;
+$ember-power-select-multiple-option-padding: 0 4px !default;
