select class now also customzieable

--- a/addon/templates/components/em-select-field.hbs
+++ b/addon/templates/components/em-select-field.hbs
@@ -23,7 +23,8 @@
     onkeydown=onkeydown
     disabled=disabled
     options=options 
-    selected=value 
+    selected=value
+    class=selectClass
     onchange=(action (mut value)) as |choice|}}
     {{#if hasBlockParams}}
       {{yield choice}}
