added trigger and dropdown classes to select

--- a/addon/templates/components/em-select-field.hbs
+++ b/addon/templates/components/em-select-field.hbs
@@ -25,6 +25,8 @@
     options=options 
     selected=value
     class=selectClass
+    triggerClass=triggerClass
+    dropdownClass=dropdownClass
     onchange=(action (mut value)) as |choice|}}
     {{#if hasBlockParams}}
       {{yield choice}}
